deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: footyhints

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: footyhints
spec:
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: footyhints/footyhints_flask:latest
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 5000
            protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cron
  namespace: footyhints
spec:
  selector:
    matchLabels:
      app: cron
  template:
    metadata:
      labels:
        app: cron
    spec:
      containers:
        - name: cron
          image: footyhints/footyhints_cron:latest
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: footyhints
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5
          imagePullPolicy: Always
          ports:
          - name: mysql
            containerPort: 3306
            protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: footyhints
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: footyhints/footyhints_nginx:latest
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 80
            protocol: TCP

---
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: footyhints
  labels:
    app: nginx
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
  type: NodePort

---
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: flask
  namespace: footyhints
  labels:
    app: flask
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: flask

---
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: mysql
  namespace: footyhints
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mysql

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: footyhints
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "footyhints-com-ip"
    networking.gke.io/managed-certificates: "footyhints-com-cert"
spec:
  backend:
    serviceName: nginx
    servicePort: 80
